# wikiart-chatbot

./: .gitignore  LICENSE  README.md  build_index.py  main.py  pyproject.toml  requirements.txt  wikiart_chatbot.py  wikiart_metadata.csv
tests/: test_chatbot.py
wikiart_chatbot/: __init__.py  chatbot.py  config.py  exceptions.py  ui.py
