[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wikiart-chatbot"
version = "1.0.0"
description = "AI-powered chatbot that provides information about artworks using semantic search and LLM technology"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Your Name"}]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "faiss-cpu>=1.7.4",
    "requests>=2.31.0",
    "gradio>=4.0.0",
    "sentence-transformers>=2.2.2"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["wikiart_chatbot"]
